# BASIS

./: .gitignore  CMakeLists.txt  README.md
include/BASIS/: BASIS.h  app.h  buffer.h  context.h  declare_flags.h  exception.h  framebuffer.h  interfaces.h  manager.h  pipeline.h  rendering.h  texture.h  timer.h  types.h
src/: app.cpp  buffer.cpp  context.cpp  framebuffer.cpp  main.cpp  manager.cpp  pipeline.cpp  rendering.cpp  texture.cpp  timer.cpp
